(api): Fixed permissions in add book and register admin account
